tests/Error/YS01xx/YS0101V1.ys
VAR x = (5 - 6 * ( 7 + 6) # There is a  not closed parenthese